--- a/index.html
+++ b/index.html
@@ -11,26 +11,61 @@
 
 <body>
     <div class="nav">
-       <div class="link-wrapper">
+        <div class="link-wrapper">
             <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
             <a href="#contact">Contact</a>
-            <a href="#about">About</a>
-       </div>
+            <a href="#projects">Projects</a>
+            <a href="#store">Store</a>
+        </div>
     </div>
     <div class="top-content">
 
 
     </div>
 
-    <div class="nav">
-        <div class="link-wrapper">
-            <a class="active" href="#home">Home</a>
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
-       </div>
-    </div>
+    <div id="projects">
+
+        <h2>Projects</h2>
+        <div class="projects-inner">
+            <div class="proj-container">
+                <p class="title">Yggdrasil automotive</p>
+                <a href="NGSproject.html">
+                    <img src="img/Logo1.png" width="250" height="250">
+                </a>
+            </div>
+            <div class="proj-container">
+                <p class="title">Isle of eline</p>
+                <a href="VerticalSliceCarto.html">
+                    <img src="img/Logo1.png" width="250" height="250">
+                </a>
+            </div>
+            <div class="proj-container">
+                <p class="title">Prototyping</p>
+                <a href="TowerDefense.html">
+                    <img src="img/Logo1.png" width="250" height="250">
+                </a>
+            </div>
+            <div class="proj-container">
+                <p class="title">Web 3.0</p>
+                <a href="NGSproject.html">
+                    <img src="img/Logo1.png" width="250" height="250">
+                </a>
+            </div>
+            <div class="proj-container">
+                <p class="title">Web 3.0</p>
+                <a href="VerticalSliceCarto.html">
+                    <img src="img/Logo1.png" width="250" height="250">
+                </a>
+            </div>
+            <div class="proj-container">
+                <p class="title">Prototyping</p>
+                <a href="TowerDefense.html">
+                    <img src="img/Logo1.png" width="250" height="250">
+                </a>
+            </div>
+
+
+        </div>
 
 </body>
 
