Added contact in footer, content in modal box
Begin morgen aan die foto slider

--- a/index.html
+++ b/index.html
@@ -31,31 +31,39 @@
         <div class="project-wrapper">
                 <div class="projects-inner">
                     <div class="proj-container">
-                        <p class="title">Yggdrasil automotive</p>
+                        <p class="title">Yggdrasil MC</p>
                         <button id="myBtn" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
                         <div id="myModal" class="modal">
                             <div class="modal-content">
                                 <span class="close">&times;</span>
-                                <p>Some text in the Modal..</p>
+                                <p>
+                                    <h1>The Yggdrasil MC</h1> 
+                                    <h5>Welcome to the future of automotive design</h5> 
+                                    <br></br>
+                                    At Veldboom Studios, we're redefining mobility with this innovative venture,
+                                    combining our 3D design expertise with a vision for sustainable and efficient transportation.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="projects-inner">
                     <div class="proj-container">
-                        <p class="title">Yggdrasil automotive</p>
+                        <p class="title">Isle of Eline</p>
                         <button id="myBtn1" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
                         <div id="myModal1" class="modal">
                             <div class="modal-content">
                                 <span class="close1">&times;</span>
-                                <p>Some text in the Modal..</p>
+                                <p>
+                                    Lorum Ipsum
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="projects-inner">
                     <div class="proj-container">
-                        <p class="title">Yggdrasil automotive</p>
+                        <p class="title">Web 3.0</p>
                         <button id="myBtn2" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
                         <div id="myModal2" class="modal">
                             <div class="modal-content">
@@ -103,11 +111,26 @@
                 </div>
             </div> 
         </div>
-        <footer class="footer">
-            <h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto id saepe, iste porro voluptas, eveniet velit exercitationem ab eum consectetur, mollitia corrupti reiciendis ex repudiandae in magnam! Autem, id corporis.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae porro est ex alias sapiente quos dolorum a enim. Accusamus, iste iusto. Nemo ipsum dicta non laborum iure? Cum, nobis repellendus.
-            </h1>
+        <footer class="footer" id="contact">
+            <h1>Contact</h1>
+            <br></br>
+            <p>
+                We'd love to hear from you. 
+                Whether you have a question about our services, want to discuss an idea, or simply want to share your thoughts, we're all ears.
+                <br>
+                Feel free to get in touch with us through any of our social media channels:
+                </br>
+                <button id="ytBtn" class="mySocials"><img class="social-image" src="img/Socials01.png">YouTube</button>
+                <button id="igBtn" class="mySocials"><img class="social-image" src="img/Socials02.png">Instagram</button>
+                <button id="fbBtn" class="mySocials"><img class="social-image" src="img/Socials03.png">Facebook</button>
+                <br>
+                Or drop us an email at: (your email address)
+                </br>
+                For more urgent matters, you can also give us a call at: (your phone number)
+                <br>
+                We're looking forward to connecting with you and embarking on this creative journey together.     
+                </br>       
+            </p>
         </footer>
 </body>
 </html>
