--- a/index.html
+++ b/index.html
@@ -19,118 +19,119 @@
             <a href="#store">Store</a>
         </div>
     </div>
-    <div class="top-content">
+    <div id="Home" class="tabcontent">
+        <div class="top-content">
 
 
 
 
-    </div>
-
-    <div id="projects" class="projects">
-        <h2>Projects</h2>
-        <div class="project-wrapper">
-                <div class="projects-inner">
-                    <div class="proj-container">
-                        <p class="title">Yggdrasil MC</p>
-                        <button id="myBtn" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
-                        <div id="myModal" class="modal">
-                            <div class="modal-content">
-                                <span class="close">&times;</span>
-                                <p>
-                                    <h1>The Yggdrasil MC</h1> 
-                                    <h5>Welcome to the future of automotive design</h5> 
-                                    <br></br>
-                                    At Veldboom Studios, we're redefining mobility with this innovative venture,
-                                    combining our 3D design expertise with a vision for sustainable and efficient transportation.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="projects-inner">
-                    <div class="proj-container">
-                        <p class="title">Isle of Eline</p>
-                        <button id="myBtn1" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
-                        <div id="myModal1" class="modal">
-                            <div class="modal-content">
-                                <span class="close1">&times;</span>
-                                <p>
-                                    Lorum Ipsum
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="projects-inner">
-                    <div class="proj-container">
-                        <p class="title">Web 3.0</p>
-                        <button id="myBtn2" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
-                        <div id="myModal2" class="modal">
-                            <div class="modal-content">
-                                <span class="close2">&times;</span>
-                                <p>Some text in the Modal..</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="projects-inner">
-                    <div class="proj-container">
-                        <p class="title">Yggdrasil automotive</p>
-                        <button id="myBtn3" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
-                        <div id="myModal3" class="modal">
-                            <div class="modal-content">
-                                <span class="close3">&times;</span>
-                                <p>Some text in the Modal..</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="projects-inner">
-                    <div class="proj-container">
-                        <p class="title">Yggdrasil automotive</p>
-                        <button id="myBtn4" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
-                        <div id="myModal4" class="modal">
-                            <div class="modal-content">
-                                <span class="close4">&times;</span>
-                                <p>Some text in the Modal..</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="projects-inner">
-                    <div class="proj-container">
-                        <p class="title">Yggdrasil automotive</p>
-                        <button id="myBtn5" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
-                        <div id="myModal5" class="modal">
-                            <div class="modal-content">
-                                <span class="close5">&times;</span>
-                                <p>Some text in the Modal..</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> 
         </div>
-        <footer class="footer" id="contact">
-            <h1>Contact</h1>
-            <br></br>
-            <p>
-                We'd love to hear from you. 
-                Whether you have a question about our services, want to discuss an idea, or simply want to share your thoughts, we're all ears.
-                <br>
-                Feel free to get in touch with us through any of our social media channels:
-                </br>
-                <button id="ytBtn" class="mySocials"><img class="social-image" src="img/Socials01.png">YouTube</button>
-                <button id="igBtn" class="mySocials"><img class="social-image" src="img/Socials02.png">Instagram</button>
-                <button id="fbBtn" class="mySocials"><img class="social-image" src="img/Socials03.png">Facebook</button>
-                <br>
-                Or drop us an email at: (your email address)
-                </br>
-                For more urgent matters, you can also give us a call at: (your phone number)
-                <br>
-                We're looking forward to connecting with you and embarking on this creative journey together.     
-                </br>       
-            </p>
-        </footer>
+        <div id="projects" class="projects">
+            <h2>Projects</h2>
+            <div class="project-wrapper">
+                    <div class="projects-inner">
+                        <div class="proj-container">
+                            <p class="title">Yggdrasil MC</p>
+                            <button id="myBtn" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
+                            <div id="myModal" class="modal">
+                                <div class="modal-content">
+                                    <span class="close">&times;</span>
+                                    <p>
+                                        <h1>The Yggdrasil MC</h1> 
+                                        <h5>Welcome to the future of automotive design</h5> 
+                                        <br></br>
+                                        At Veldboom Studios, we're redefining mobility with this innovative venture,
+                                        combining our 3D design expertise with a vision for sustainable and efficient transportation.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects-inner">
+                        <div class="proj-container">
+                            <p class="title">Isle of Eline</p>
+                            <button id="myBtn1" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
+                            <div id="myModal1" class="modal">
+                                <div class="modal-content">
+                                    <span class="close1">&times;</span>
+                                    <p>
+                                        Lorum Ipsum
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects-inner">
+                        <div class="proj-container">
+                            <p class="title">Web 3.0</p>
+                            <button id="myBtn2" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
+                            <div id="myModal2" class="modal">
+                                <div class="modal-content">
+                                    <span class="close2">&times;</span>
+                                    <p>Some text in the Modal..</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects-inner">
+                        <div class="proj-container">
+                            <p class="title">Yggdrasil automotive</p>
+                            <button id="myBtn3" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
+                            <div id="myModal3" class="modal">
+                                <div class="modal-content">
+                                    <span class="close3">&times;</span>
+                                    <p>Some text in the Modal..</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects-inner">
+                        <div class="proj-container">
+                            <p class="title">Yggdrasil automotive</p>
+                            <button id="myBtn4" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
+                            <div id="myModal4" class="modal">
+                                <div class="modal-content">
+                                    <span class="close4">&times;</span>
+                                    <p>Some text in the Modal..</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="projects-inner">
+                        <div class="proj-container">
+                            <p class="title">Yggdrasil automotive</p>
+                            <button id="myBtn5" class="myBtn"><img class="modal-image" src="img/Logo1.png"></button>
+                            <div id="myModal5" class="modal">
+                                <div class="modal-content">
+                                    <span class="close5">&times;</span>
+                                    <p>Some text in the Modal..</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+            <footer class="footer" id="contact">
+                <h1>Contact</h1>
+                <br></br>
+                <p>
+                    We'd love to hear from you. 
+                    Whether you have a question about our services, want to discuss an idea, or simply want to share your thoughts, we're all ears.
+                    <br>
+                    Feel free to get in touch with us through any of our social media channels:
+                    </br>
+                    <button id="ytBtn" class="mySocials"><img class="social-image" src="img/Socials01.png">YouTube</button>
+                    <button id="igBtn" class="mySocials"><img class="social-image" src="img/Socials02.png">Instagram</button>
+                    <button id="fbBtn" class="mySocials"><img class="social-image" src="img/Socials03.png">Facebook</button>
+                    <br>
+                    Or drop us an email at: (your email address)
+                    </br>
+                    For more urgent matters, you can also give us a call at: (your phone number)
+                    <br>
+                    We're looking forward to connecting with you and embarking on this creative journey together.     
+                    </br>       
+                </p>
+            </footer>
+    </div>
 </body>
 </html>
