Greyed out a few things, testing out slider V1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" href="style.css">
 <script defer src="modal.js"></script>
+<script defer src="slider.js"></script>
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +24,14 @@
         <div class="top-content">
 
 
-
+            <div class="slider-container">
+                <div class="slider">
+                  <img src="img/HighresScreenshot00001.png" alt="Image 1">
+                  <img src="img/HighresScreenshot00035.png" alt="Image 2">
+                  <img src="img/HighresScreenshot00036.png" alt="Image 3">
+                </div>
+              </div>
+              
 
         </div>
         <div id="projects" class="projects">
