revamped slider should be more visible now
Co-Authored-By: j5x <90614203+j5x@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="nav">
         <div class="link-wrapper">
             <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
+            <a href="aboutme.html">Us</a>
             <a href="#projects">Projects</a>
             <a href="#store">Store</a>
         </div>
@@ -26,17 +26,15 @@
         <div class="top-content">
 
 
-            <div class="slideshow-container">
-              <div class="mySlides">
-                <img src="img/render1.png" style="width:100%">
+          <div class="slider">
+            <div class="wrapper">
+                <img class="slideimg" src="img/render1.png">
+                <img class="slideimg" src="img/HighresScreenshot00036.png">
+                <img class="slideimg" src="img/HighresScreenshot00054.png">
+                <img class="slideimg" src="img/HighresScreenshot00035.png">
               </div>
-              <div class="mySlides">
-                <img src="img/render2.png" style="width:100%">
-              </div>
-              <div class="mySlides">
-                <img src="img/render3.png" style="width:100%">
-              </div>
-            </div>
+          </div>
+              
 
 
         </div>
@@ -134,8 +132,8 @@
                     Feel free to get in touch with us through any of our social media channels:
                 </p>
 
-                <a href="https://www.youtube.com/@SVADesign" class="fa fa-youtube"></a>
-                <a href="https://www.instagram.com/veldboomstudios/" class="fa fa-instagram"></a>
+                <a href="https://www.youtube.com/@SVADesign" target="_blank" class="fa fa-youtube"></a>
+                <a href="https://www.instagram.com/veldboomstudios/" target="_blank" class="fa fa-instagram"></a>
                 
 
                 <br>
