remade the slider again and working on aboutus

--- a/aboutme.html
+++ b/aboutme.html
@@ -18,20 +18,26 @@
             <a href="#store">Store</a>
         </div>
     </div>
-    <div class="aboutus">
-        <h1>
-            About us
+    <div class="abt">
+        <h1 class="abth1">
+            About Veldboom Studios
         </h1>
-        <br>
-        <h3>Our Journey</h3>
+        <h2 class="abth2">
+            Our Journey
+        </h2>
         <p>
-            From a young age, our founder, Shaquille Veldboom, has been engrossed in the world of 3D design.
-            His journey began at the tender age of eight, leading to him amassing over 30,000 hours in this craft and
-            gaining 17 years of experience in the field.
-            Born and raised in Amsterdam Southeast, a low-income, predominantly black community,
-            Shaquille found his passion in 3D design and used it as a tool to transcend his circumstances​.
-        </p>
-        <br>
+            
+Our Journey<br>
 
+From a young age, our founder, Shaquille Veldboom, has been engrossed in the world of 3D design. His journey began at the tender age of eight, leading to him amassing over 30,000 hours in this craft and gaining 17 years of experience in the field.<br>
+Born and raised in Amsterdam Southeast, a low-income, predominantly black community, Shaquille found his passion in 3D design and used it as a tool to transcend his circumstances​. <br>
+
+Shaquille’s journey wasn’t traditional. He left college three times as it didn’t resonate with his learning style or creative process. Despite this, he became an in-demand 3D designer, applying his skills to industrial design, game design, animation, and music​1​.
+
+Today, Shaquille leads Veldboom Studios, pushing the boundaries of creativity and technological innovation. His ability to visualize and create without constraints has set the studio apart, making it a leader in 3D design, 3D printing, gamification, and web 3.0 solutions.
+Our Team
+At Veldboom Studios, we are more than a team; we're a family of creative innovators and technologists. Each member brings unique skills and perspectives, contributing to our diverse and dynamic environment. Together, we work to push the limits of what's possible, bringing our collective vision to life.
+
+        </p>
 
     </div>
