--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
 
 
           <div class="slider">
-            <div class="wrapper">
-                <img class="slideimg" src="img/render1.png">
-                <img class="slideimg" src="img/HighresScreenshot00036.png">
-                <img class="slideimg" src="img/HighresScreenshot00054.png">
-                <img class="slideimg" src="img/HighresScreenshot00035.png">
-              </div>
+            <div class="sliderouter">
+                <div class="slidertext">
+                    <h1>
+                        VeldBoom Studios
+                    </h1>
+                    <h2>
+                        Welcome to Veldboom Studios
+                    </h2>
+                    <h3> Embark on a journey through the realm of 3D innovation, and get ready to witness the future of design. Here at Veldboom Studios, we're not just a 3D design company - we're pioneers, constantly pushing the boundaries of what's possible.</h3>
+                </div>
+            </div>
           </div>
               
 
