reorganized css, added about us
the about us is still in progress but its close to finishing

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
     <meta charset="UTF-8">
@@ -18,26 +19,115 @@
             <a href="#store">Store</a>
         </div>
     </div>
-    <div class="abt">
-        <h1 class="abth1">
-            About Veldboom Studios
-        </h1>
-        <h2 class="abth2">
-            Our Journey
-        </h2>
-        <p>
-            
-Our Journey<br>
+    <div class="abtus">
+        <div class="abtmain">
+            <h1>
+                Our Mission
+            </h1>
+            <p>
+                Our mission is to innovate and create, using the latest production methods and our cultural awareness to
+                push the boundaries of what is possible. We aim to inspire and train a new generation of creatives,
+                empowering them to pursue their passions and contribute to our collective vision. Our goal is to build a
+                cultural and technological ecosystem that fosters creativity, diversity, and collaboration.
+            </p>
+            <h1>
+                Join our Journey
+            </h1>
+            <p>
+                We invite you to explore our projects, learn more about our team, and see the impact of our work. If you
+                share our passion for 3D design, creativity, and innovation, we would love to hear from you. Whether
+                you're a potential client, collaborator, or someone who wants to learn more about what we do, please get
+                in touch.
+            </p>
+            <h1>
+                About Veldboom Studios
+            </h1>
+            <p>
+                About Veldboom Studios
+                Our Journey
+                From a young age, our founder, Shaquille Veldboom, has been engrossed in the world of 3D design. His
+                journey
+                began at the tender age of eight, leading to him amassing over 30,000 hours in this craft and gaining 17
+                years of experience in the field. Born and raised in Amsterdam Southeast, a low-income, predominantly
+                black
+                community, Shaquille found his passion in 3D design and used it as a tool to transcend his
+                circumstances​​.<br>
+                <br>
+                Shaquille’s journey wasn’t traditional. He left college three times as it didn’t resonate with his
+                learning
+                style or creative process. Despite this, he became an in-demand 3D designer, applying his skills to
+                industrial design, game design, animation, and music​​.<br>
+                <br>
+                Today, Shaquille leads Veldboom Studios, pushing the boundaries of creativity and technological
+                innovation.
+                His ability to visualize and create without constraints has set the studio apart, making it a leader in
+                3D
+                design, 3D printing, gamification, and web 3.0 solutions.<br>
+                <br>
+            </p>
+            <h1>
+                Our Team
+            </h1>
+            <p>
+                At Veldboom Studios, we are more than a team; we're a family of creative innovators and technologists.
+                Each
+                member brings unique skills and perspectives, contributing to our diverse and dynamic environment.
+                Together,
+                we work to push the limits of what's possible, bringing our collective vision to life.
 
-From a young age, our founder, Shaquille Veldboom, has been engrossed in the world of 3D design. His journey began at the tender age of eight, leading to him amassing over 30,000 hours in this craft and gaining 17 years of experience in the field.<br>
-Born and raised in Amsterdam Southeast, a low-income, predominantly black community, Shaquille found his passion in 3D design and used it as a tool to transcend his circumstances​. <br>
+            </p>
+        </div>
+        <div id="abtslideshow">
+            <div class="abtslide-wrapper">
+                <div class="abtslide">
+                    <h1 class="abtslide-number">1</h1>
+                </div>
+                <div class="abtslide">
+                    <h1 class="abtslide-number">2</h1>
+                </div>
+                <div class="abtslide">
+                    <h1 class="abtslide-number">3</h1>
+                </div>
+                <div class="abtslide">
+                    <h1 class="abtslide-number">4</h1>
+                </div>
+                <div class="abtslide">
+                    <h1 class="abtslide-number">5</h1>
+                </div>
+            </div>
+        </div>
+        <footer class="footer" id="contact">
+            <h1>Contact</h1>
+            <br></br>
+            <p>
+                We'd love to hear from you. Whether you have a question about our services, want to discuss an idea, or
+                simply want to share your thoughts, we're all ears.
+                <br>
+                Feel free to get in touch with us through any of our social media channels:
+            </p>
 
-Shaquille’s journey wasn’t traditional. He left college three times as it didn’t resonate with his learning style or creative process. Despite this, he became an in-demand 3D designer, applying his skills to industrial design, game design, animation, and music​1​.
+            <a href="https://www.youtube.com/@SVADesign" target="_blank" class="fa fa-youtube"></a>
+            <a href="https://www.instagram.com/veldboomstudios/" target="_blank" class="fa fa-instagram"></a>
 
-Today, Shaquille leads Veldboom Studios, pushing the boundaries of creativity and technological innovation. His ability to visualize and create without constraints has set the studio apart, making it a leader in 3D design, 3D printing, gamification, and web 3.0 solutions.
-Our Team
-At Veldboom Studios, we are more than a team; we're a family of creative innovators and technologists. Each member brings unique skills and perspectives, contributing to our diverse and dynamic environment. Together, we work to push the limits of what's possible, bringing our collective vision to life.
 
-        </p>
+            <br>
+            <h2>Drop us an email at: example@gmail.com</h2>
+            <br>
+            For more urgent matters, you can also give us a call at: (your phone number)
+            <br>
+            We're looking forward to connecting with you and embarking on this creative journey together.
+            </br>
+            </p>
+        </footer>
 
     </div>
+
+    <div id="Contact" class="tabcontent">
+
+
+    </div>
+    </div>
+
+    </div>
+
+</body>
