Meer inhoud in modal, changed layout on abt us, wip team slider

--- a/aboutme.html
+++ b/aboutme.html
@@ -23,33 +23,11 @@
         <div class="abtus-wrapper">
             <div class="abtmain">
                 <h1>
-                    Our Mission
+                    Veldboom Studios
                 </h1>
+                <h2 class="abtsub">Our Journey</h2> <!--Hiernaast Fade in overlay van W3Schools met foto van shaq-->
                 <p>
-                    Our mission is to innovate and create, using the latest production methods and our cultural
-                    awareness to
-                    push the boundaries of what is possible. We aim to inspire and train a new generation of creatives,
-                    empowering them to pursue their passions and contribute to our collective vision. Our goal is to
-                    build a
-                    cultural and technological ecosystem that fosters creativity, diversity, and collaboration.
-                </p>
-                <h1>
-                    Join our Journey
-                </h1>
-                <p>
-                    We invite you to explore our projects, learn more about our team, and see the impact of our work. If
-                    you
-                    share our passion for 3D design, creativity, and innovation, we would love to hear from you. Whether
-                    you're a potential client, collaborator, or someone who wants to learn more about what we do, please
-                    get
-                    in touch.
-                </p>
-                <h1>
-                    About Veldboom Studios
-                </h1>
-                <p>
-                    About Veldboom Studios
-                    Our Journey
+                    Veldboom Studios -
                     From a young age, our founder, Shaquille Veldboom, has been engrossed in the world of 3D design. His
                     journey
                     began at the tender age of eight, leading to him amassing over 30,000 hours in this craft and
@@ -73,6 +51,7 @@
                     design, 3D printing, gamification, and web 3.0 solutions.<br>
                     <br>
                 </p>
+
                 <h1>
                     Our Team
                 </h1>
@@ -83,10 +62,53 @@
                     member brings unique skills and perspectives, contributing to our diverse and dynamic environment.
                     Together,
                     we work to push the limits of what's possible, bringing our collective vision to life.
+                </p>
 
+                <!--Team member slider-->
+                <div id="teamSlider">
+                    <div class="slide">
+                      <img src="img/blank.png" alt="Team Member 1" class="team-member-image">
+                      <h3>Naam</h3>
+                      <p>Functie</p>
+                    </div>
+                    <div class="slide">
+                      <img src="img/blank.png" alt="Team Member 2" class="team-member-image">
+                      <h3>Naam</h3>
+                      <p>Functie</p>
+                    </div>
+                    <!-- Add more slides for other team members -->
+                </div>
+                  
+
+                <h1>
+                    Our Mission
+                </h1>
+                <p>
+                    Our mission is to innovate and create, using the latest production methods and our cultural
+                    awareness to
+                    push the boundaries of what is possible. We aim to inspire and train a new generation of creatives,
+                    empowering them to pursue their passions and contribute to our collective vision. Our goal is to
+                    build a
+                    cultural and technological ecosystem that fosters creativity, diversity, and collaboration.
+                </p>
+
+
+                <h1>
+                    Join our Journey
+                </h1>
+                <p>
+                    We invite you to explore our projects, learn more about our team, and see the impact of our work. If
+                    you
+                    share our passion for 3D design, creativity, and innovation, we would love to hear from you. Whether
+                    you're a potential client, collaborator, or someone who wants to learn more about what we do, please
+                    get
+                    in touch.
+                    <br></br>
+                    The Veldboom Studios Team
                 </p>
             </div>
-            <div id="abtslideshow">
+
+            <div id="abtslideshow"> <!--Bedrijven waarmee we al gewerkt hebben.-->
                 <div class="abtslide-wrapper">
                     <div class="abtslide">
                         <h1 class="abtslide-number">1</h1>
@@ -105,6 +127,7 @@
                     </div>
                 </div>
             </div>
+
             <footer class="footer" id="contact">
                 <h1>Contact</h1>
                 <br></br>
