--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                                 <p class="modal-text">At Veldboom Studios, we're redefining mobility with this
                                     innovative venture,
                                     combining our 3D design expertise with a vision for sustainable and efficient
-                                    transportation.</p>
+                                    transportation.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -74,8 +75,11 @@
                         <div id="myModal1" class="modal">
                             <div class="modal-content">
                                 <span class="close1">&times;</span>
-                                <p>
-                                    Lorum Ipsum
+                                <h1 class="modal-title">The Isle of Eline</h1>
+                                <h5 class="modal-subtitle">-Welcome to the Metaverse-</h5>
+                                <br></br>
+                                <p class="modal-text">Immerse yourself in a whole new universe with the Isle of Eline Metaverse/Game Project.
+                                    Here at Veldboom Studios, we are breaking barriers and traversing dimensions, bringing to life a digital world beyond imagination.
                                 </p>
                             </div>
                         </div>
