Added company we worked with text

--- a/aboutme.html
+++ b/aboutme.html
@@ -204,8 +204,11 @@
                   </div>
                 </div>
             </div>
-              
 
+            <div class="abtslide-text">
+              <h2>Companies we worked with</h2>
+            </div>
+              
             <footer class="footer" id="contact">
                 <h1>Contact</h1>
                 <br></br>
