added actual email to contact footer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
             <br>
-            <h2>Drop us an email at: example@gmail.com</h2>
+            <h2>Drop us an email at: info@veldboomstudios.com</h2>
             <br>
             For more urgent matters, you can also give us a call at: (your phone number)
             <br>
