--- a/aboutme.html
+++ b/aboutme.html
@@ -71,9 +71,8 @@
     <div class="nav">
         <div class="link-wrapper">
             <a class="active" href="index.html">Home</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Us</a>
             <a href="#projects">Projects</a>
-            <a href="#store">Store</a>
         </div>
     </div>
     <div class="abtus">
