Made logo transparant & fit in navbar

--- a/aboutme.html
+++ b/aboutme.html
@@ -69,6 +69,8 @@
 
 <body>
     <div class="nav">
+      <a href="index.html" class="logo">
+        <img src="img/LOGO_2.png" alt="Logo">
         <div class="link-wrapper">
             <a class="active" href="index.html">Home</a>
             <a href="#contact">Us</a>
@@ -125,17 +127,17 @@
                 <div id="teamSlider">
                     <div class="slide">
                       <img src="img/blank.png" alt="Team Member 1" class="team-member-image">
-                      <h3>Naam</h3>
+                      <h3>Gael</h3>
                       <p class="function">Functie</p>
                     </div>
                     <div class="slide">
                       <img src="img/blank.png" alt="Team Member 2" class="team-member-image">
-                      <h3>Naam</h3>
+                      <h3>Jahvairo</h3>
                       <p class="function">Functie</p>
                     </div>
                     <div class="slide">
                         <img src="img/blank.png" alt="Team Member 3" class="team-member-image">
-                        <h3>Naam</h3>
+                        <h3>Jason</h3>
                         <p class="function">Functie</p>
                     </div>
                 </div>
