--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
     <div class="nav">
+        <div class="logo">
+            <img src="img/LOGO_transparent.png" alt="Logo">
+          </div>
         <div class="link-wrapper">
             <a class="active" href="#home">Home</a>
             <a href="aboutme.html">Us</a>
