--- a/aboutme.html
+++ b/aboutme.html
@@ -69,12 +69,16 @@
 
 <body>
     <div class="nav">
-      <a href="index.html" class="logo">
-        <img src="img/LOGO_2.png" alt="Logo">
+      <div class="logo">
+          <a href="index.html">
+            <img src="img/LOGO_transparent.png" alt="Logo">
+          </a>    
+        </div>
+        
         <div class="link-wrapper">
             <a class="active" href="index.html">Home</a>
             <a href="#contact">Us</a>
-            <a href="#projects">Projects</a>
+            <a href="index.html#projects" >Projects</a>
         </div>
     </div>
     <div class="abtus">
